--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </svg>
                 </button>
                 <ul class="list mobile-menu-nav">
-                    <li class="mobile-menu-nav-item"> <a href="" class="link mobile-menu-nav-link">Студия</a></li>
+                    <li class="mobile-menu-nav-item"> <a href="./index.html" class="link mobile-menu-nav-link">Студия</a></li>
                     <li class="mobile-menu-nav-item"> <a href="./portfolio.html"
                             class="link mobile-menu-nav-link">Портфолио</a></li>
                     <li class="mobile-menu-nav-item"> <a href="" class="link mobile-menu-nav-link">Контакты</a></li>
