виправлено помилки дз 8

--- a/index.html
+++ b/index.html
@@ -212,23 +212,23 @@
                         <picture>
 
                             <source media="(min-width: 1200px)"
-                                srcset="./images/team/desktop/product-designer1-desktop.webp 1x, ./images/team/desktop/product-designer1@2X-desktop.webp 2x"
+                                srcset="./images/team/desktop/product-designer1-desktop.webp 1x, ./images/team/desktop/product-designer1@2x-desktop.webp 2x"
                                 type="image/webp">
                             <source media="(min-width: 1200px)"
-                                srcset="./images/team/desktop/product-designer1-desktop.jpg 1x, ./images/team/desktop/product-designer1@2X-desktop.jpg 2x">
+                                srcset="./images/team/desktop/product-designer1-desktop.jpg 1x, ./images/team/desktop/product-designer1@2x-desktop.jpg 2x">
 
                             <source media="(min-width: 768px)"
-                                srcset="./images/team/tablet/team1-tablet.webp 1x, ./images/team/tablet/team1@2X-tablet.webp 2x"
+                                srcset="./images/team/tablet/team1-tablet.webp 1x, ./images/team/tablet/team1@2x-tablet.webp 2x"
                                 type="image/webp">
                             <source media="(min-width: 768px)"
-                                srcset="./images/team/tablet/team1-tablet.jpg 1x, ./images/team/tablet/team1@2X-tablet.jpg 2x">
+                                srcset="./images/team/tablet/team1-tablet.jpg 1x, ./images/team/tablet/team1@2x-tablet.jpg 2x">
 
                             <source media="(max-width: 767px)"
-                                srcset="./images/team/mobile/team1-mobile.webp 1x, ./images/team/mobile/team1@2X-mobile.webp 2x"
+                                srcset="./images/team/mobile/team1-mobile.webp 1x, ./images/team/mobile/team1@2x-mobile.webp 2x"
                                 type="image/webp">
                             <source media="(max-width: 767px)"
-                                srcset="./images/team/mobile/team1-mobile.jpg 1x, ./images/team/mobile/team1@2X-mobile.jpg 2x">
-                            <img class="team__icon" src="#" alt="Игорь Демьяненко">
+                                srcset="./images/team/mobile/team1-mobile.jpg 1x, ./images/team/mobile/team1@2x-mobile.jpg 2x">
+                            <img class="team__icon" src="./images/team/mobile/team1@2x-mobile.jpg" alt="Игорь Демьяненко">
                         </picture>
 
                         <div class="team__name-position">
@@ -270,10 +270,10 @@
                         <picture>
 
                             <source media="(min-width: 1200px)"
-                                srcset="./images/team/desktop/frontend-developer2-desktop.webp 1x, ./images/team/desktop/frontend-developer2@2X-desktop.webp 2x"
+                                srcset="../images/team/desktop/frontend-developer2-desktop.webp 1x, ../images/team/desktop/frontend-developer2@2X-desktop.webp 2x"
                                 type="image/webp">
                             <source media="(min-width: 1200px)"
-                                srcset="./images/team/desktop/frontend-developer2-desktop.jpg 1x, ./images/team/desktop/frontend-developer2@2X-desktop.jpg 2x">
+                                srcset="../images/team/desktop/frontend-developer2-desktop.jpg 1x, ../images/team/desktop/frontend-developer2@2X-desktop.jpg 2x">
 
                             <source media="(min-width: 768px)"
                                 srcset="./images/team/tablet/team2-tablet.webp 1x, ./images/team/tablet/team2@2X-tablet.webp 2x"
