Зробрено правки ДЗ 8

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                 type="image/webp">
                             <source media="(max-width: 767px)"
                                 srcset="./images/team/mobile/team1-mobile.jpg 1x, ./images/team/mobile/team1@2x-mobile.jpg 2x">
-                            <img class="team__icon" src="./images/team/mobile/team1@2x-mobile.jpg" alt="Игорь Демьяненко">
+                            <img class="team__icon" src="#" alt="Игорь Демьяненко">
                         </picture>
 
                         <div class="team__name-position">
@@ -270,22 +270,22 @@
                         <picture>
 
                             <source media="(min-width: 1200px)"
-                                srcset="../images/team/desktop/frontend-developer2-desktop.webp 1x, ../images/team/desktop/frontend-developer2@2X-desktop.webp 2x"
+                                srcset="./images/team/desktop/frontend-developer2-desktop.webp 1x, ./images/team/desktop/frontend-developer2@2x-desktop.webp 2x"
                                 type="image/webp">
                             <source media="(min-width: 1200px)"
-                                srcset="../images/team/desktop/frontend-developer2-desktop.jpg 1x, ../images/team/desktop/frontend-developer2@2X-desktop.jpg 2x">
+                                srcset="./images/team/desktop/frontend-developer2-desktop.jpg 1x, ./images/team/desktop/frontend-developer2@2x-desktop.jpg 2x">
 
                             <source media="(min-width: 768px)"
-                                srcset="./images/team/tablet/team2-tablet.webp 1x, ./images/team/tablet/team2@2X-tablet.webp 2x"
+                                srcset="./images/team/tablet/team2-tablet.webp 1x, ./images/team/tablet/team2@2x-tablet.webp 2x"
                                 type="image/webp">
                             <source media="(min-width: 768px)"
-                                srcset="./images/team/tablet/team2-tablet.jpg 1x, ./images/team/tablet/team2@2X-tablet.jpg 2x">
+                                srcset="./images/team/tablet/team2-tablet.jpg 1x, ./images/team/tablet/team2@2x-tablet.jpg 2x">
 
                             <source media="(max-width: 767px)"
-                                srcset="./images/team/mobile/team2-mobile.webp 1x, ./images/team/mobile/team2@2X-mobile.webp 2x"
+                                srcset="./images/team/mobile/team2-mobile.webp 1x, ./images/team/mobile/team2@2x-mobile.webp 2x"
                                 type="image/webp">
                             <source media="(max-width: 767px)"
-                                srcset="./images/team/mobile/team2-mobile.jpg 1x, ./images/team/mobile/team2@2X-mobile.jpg 2x">
+                                srcset="./images/team/mobile/team2-mobile.jpg 1x, ./images/team/mobile/team2@2x-mobile.jpg 2x">
                             <img class="team__icon" src="#" alt="Ольга Репина">
                         </picture>
 
@@ -328,22 +328,22 @@
                         <picture>
 
                             <source media="(min-width: 1200px)"
-                                srcset="./images/team/desktop/marketing3-desktop.webp 1x, ./images/team/desktop/marketing3@2X-desktop.webp 2x"
+                                srcset="./images/team/desktop/marketing3-desktop.webp 1x, ./images/team/desktop/marketing3@2x-desktop.webp 2x"
                                 type="image/webp">
                             <source media="(min-width: 1200px)"
-                                srcset="./images/team/desktop/marketing3-desktop.jpg 1x, ./images/team/desktop/marketing3@2X-desktop.jpg 2x">
+                                srcset="./images/team/desktop/marketing3-desktop.jpg 1x, ./images/team/desktop/marketing3@2x-desktop.jpg 2x">
 
                             <source media="(min-width: 768px)"
-                                srcset="./images/team/tablet/team3-tablet.webp 1x, ./images/team/tablet/team3@2X-tablet.webp 2x"
+                                srcset="./images/team/tablet/team3-tablet.webp 1x, ./images/team/tablet/team3@2x-tablet.webp 2x"
                                 type="image/webp">
                             <source media="(min-width: 768px)"
-                                srcset="./images/team/tablet/team3-tablet.jpg 1x, ./images/team/tablet/team3@2X-tablet.jpg 2x">
+                                srcset="./images/team/tablet/team3-tablet.jpg 1x, ./images/team/tablet/team3@2x-tablet.jpg 2x">
 
                             <source media="(max-width: 767px)"
-                                srcset="./images/team/mobile/team3-mobile.webp 1x, ./images/team/mobile/team3@2X-mobile.webp 2x"
+                                srcset="./images/team/mobile/team3-mobile.webp 1x, ./images/team/mobile/team3@2x-mobile.webp 2x"
                                 type="image/webp">
                             <source media="(max-width: 767px)"
-                                srcset="./images/team/mobile/team3-mobile.jpg 1x, ./images/team/mobile/team3@2X-mobile.jpg 2x">
+                                srcset="./images/team/mobile/team3-mobile.jpg 1x, ./images/team/mobile/team3@2x-mobile.jpg 2x">
                             <img class="team__icon" src="#" alt="Николай Тарасов">
                         </picture>
 
@@ -386,23 +386,23 @@
                         <picture>
 
                             <source media="(min-width: 1200px)"
-                                srcset="./images/team/desktop/ui-designer4-desktop.webp 1x, ./images/team/desktop/ui-designer4@2X-desktop.webp 2x"
+                                srcset="./images/team/desktop/ui-designer4-desktop.webp 1x, ./images/team/desktop/ui-designer4@2x-desktop.webp 2x"
                                 type="image/webp">
                             <source media="(min-width: 1200px)"
-                                srcset="./images/team/desktop/ui-designer4-desktop.jpg 1x, ./images/team/desktop/ui-designer4@2X-desktop.jpg 2x">
+                                srcset="./images/team/desktop/ui-designer4-desktop.jpg 1x, ./images/team/desktop/ui-designer4@2x-desktop.jpg 2x">
 
                             <source media="(min-width: 768px)"
-                                srcset="./images/team/tablet/team4-tablet.webp 1x, ./images/team/tablet/team4@2X-tablet.webp 2x"
+                                srcset="./images/team/tablet/team4-tablet.webp 1x, ./images/team/tablet/team4@2x-tablet.webp 2x"
                                 type="image/webp">
                             <source media="(min-width: 768px)"
-                                srcset="./images/team/tablet/team4-tablet.jpg 1x, ./images/team/tablet/team4@2X-tablet.jpg 2x">
+                                srcset="./images/team/tablet/team4-tablet.jpg 1x, ./images/team/tablet/team4@2x-tablet.jpg 2x">
 
                             <source media="(max-width: 767px)"
-                                srcset="./images/team/mobile/team4-mobile.webp 1x, ./images/team/mobile/team4@2X-mobile.webp 2x"
+                                srcset="./images/team/mobile/team4-mobile.webp 1x, ./images/team/mobile/team4@2x-mobile.webp 2x"
                                 type="image/webp">
                             <source media="(max-width: 767px)"
-                                srcset="./images/team/mobile/team4-mobile.jpg 1x, ./images/team/mobile/team4@2X-mobile.jpg 2x">
-                            <img class="team__icon" src="#" alt="Михаил Ермаков">
+                                srcset="./images/team/mobile/team4-mobile.jpg 1x, ./images/team/mobile/team4@2x-mobile.jpg 2x">
+                            <img class="team__icon" src="./images/team/mobile/team4@2x-mobile.jpg" alt="Михаил Ермаков">
                         </picture>
 
                         <div class="team__name-position">
